--- a/index.html
+++ b/index.html
@@ -10,6 +10,33 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <header class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="head">
+                        <h1 class="title">
+                            My-Feed
+                        </h1>
+                        <p class="title-desc">
+                            Hello, This is my feed!
+                        </p>
+                    </div>
+                    <div class="col-12">
+                        <div class="head-image">
+                        <a href="#" class="my-introduce">
+                            <img src="./assets/me.jpg" alt="hyunho" class="me"/>
+                        </a>
+                        <p class="coment">
+                            안녕하세요! 제 이름은 최현호 입니다.
+                            <br>만나서 반가워요. 
+                            사진을 클릭 해주세요!
+                        </p>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
