--- a/index.html
+++ b/index.html
@@ -38,5 +38,24 @@
             </div>
         </div>
     </header>
+
+    <Section class="gangneung">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-4">
+                    <strong>
+                        강릉, 3월
+                    </strong>
+                    <img src="./assets/gangneung2.jpg" alt="강릉" class="gangneung2-img"/>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="./assets/gangneung4.jpg" alt="강릉" class="gangneung4-img"/>
+                </div>
+                <div class="col-12 col-md-4">
+                    <img src="./assets/gangneung5.jpg" alt="강릉" class="gangneung5-img"/>
+                </div>
+            </div>
+        </div>
+    </Section>
 </body>
 </html>
