--- a/index.html
+++ b/index.html
@@ -43,15 +43,21 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-4">
-                    <strong>
+                    <strong class="gangneung-title">
                         강릉, 3월
                     </strong>
                     <img src="./assets/gangneung2.jpg" alt="강릉" class="gangneung2-img"/>
                 </div>
                 <div class="col-12 col-md-4">
+                    <strong class="gangneung-title">
+                        빈센트 전시관
+                    </strong>
                     <img src="./assets/gangneung4.jpg" alt="강릉" class="gangneung4-img"/>
                 </div>
                 <div class="col-12 col-md-4">
+                    <strong class="gangneung-title">
+                        소품 가게
+                    </strong>
                     <img src="./assets/gangneung5.jpg" alt="강릉" class="gangneung5-img"/>
                 </div>
             </div>
