전체적인 디자인 작업 중

--- a/index.html
+++ b/index.html
@@ -31,8 +31,14 @@
                             안녕하세요! 제 이름은 최현호 입니다.
                             <br>만나서 반가워요. 
                             사진을 클릭 해주세요!
+                            <br>
+                            <br>
+                            2021년 저의 일상 입니다!
+                            <br>
+                            <br>
+                            [ 3월 ~ 6월 까지 순서대로 입니다. ]
                         </p>
-                    </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -43,8 +49,13 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-12 col-md-4">
+                    <div class="march">
+                        <h2>
+                            - 3월 -
+                        </h2>
+                    </div>
                     <strong class="gangneung-title">
-                        강릉, 3월
+                        강릉 바다
                     </strong>
                     <img src="./assets/gangneung2.jpg" alt="강릉" class="gangneung2-img"/>
                 </div>
