--- a/index.html
+++ b/index.html
@@ -74,5 +74,30 @@
             </div>
         </div>
     </Section>
+
+    <section class="chuncheon">
+        <div class="container">
+            <div class="row"> 
+                <div class="col-12 col-md-6">
+                    <div class="april">
+                        <h2>
+                            - 4월 -
+                        </h2>
+                    </div>
+                    <strong class="chuncheon-title">
+                        육림고개
+                    </strong>
+                    <img src="./assets/Chuncheon1.jpg" alt="춘천" class="chuncheon1-img"/>
+                </div>
+                <div class="col-12 col-md-6">
+                    <strong class="chuncheon-title">
+                        수변공원
+                    </strong>
+                    <img src="./assets/Chuncheon2.jpg" alt="춘천" class="chuncheon2-img"/>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
