wonju section 추가

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <Section class="gangneung">
         <div class="container">
-            <div class="row align-items-center">
+            <div class="row">
                 <div class="col-12 col-md-4">
                     <div class="march">
                         <h2>
@@ -99,5 +99,32 @@
         </div>
     </section>
 
+    <section class="wonju">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-12 col-md-6">
+                    <div class="may">
+                        <h2>
+                            - 5월 -
+                        </h2>
+                    </div>
+                    <strong class="wonju-title">
+                        한지 문화제
+                    </strong>
+                    <img src="./assets/wonju1.jpg" alt="원주" class="wonju-img"/>
+                </div>
+                <div class="col-12 col-md-6">
+                    <strong class="festival-defin">
+                        * 축제 소개 *
+                    </strong>
+                    <p class="festival-desc">
+                        '다시금 희망을 가져보는 2021년! 환상적인 한지판타지아를 경험해보자. 
+                        당신이 있는 곳 어디에서나 축제를 즐길 수 있도록! 
+                        <mark>역대 최초 온라인과 오프라인에서 동시에 진행된다.'</mark>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
