--- a/index.html
+++ b/index.html
@@ -126,5 +126,35 @@
             </div>
         </div>
     </section>
+
+    <section class="seoul">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-md-4">
+                    <div class="june">
+                        <h2>
+                            - 6월 -
+                        </h2>
+                    </div>
+                    <strong class="seoul-title">
+                        아쿠아리움
+                    </strong>
+                    <img src="./assets/seoul1.jpg" class="seoul1-img"/>
+                </div>
+                <div class="col-12 col-md-4">
+                    <strong class="seoul-title">
+                        한강
+                    </strong>
+                    <img src="./assets/seoul2.jpg" class="seoul2-img"/>
+                </div>
+                <div class="col-12 col-md-4">
+                    <strong class="seoul-title">
+                        한강 야경
+                    </strong>
+                    <img src="./assets/seoul3.jpg" class="seoul3-img"/>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
