--- a/index.html
+++ b/index.html
@@ -156,5 +156,28 @@
             </div>
         </div>
     </section>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="icon">
+                        <div>
+                            <a href="https://www.facebook.com/profile.php?id=100005023832419" target="_blank">
+                                <img src="./assets/facebook.png" alt="facebook" class="facebook"/></a>
+                        </div>
+                        <div>
+                            <a href="https://www.instagram.com/hoho_0815/" target="_blank">
+                                <img src="./assets/instagram.png" class="instagram"></a>
+                        </div>
+                        <div>
+                            <a href="https://blog.naver.com/x7788" target="_blank">
+                                <img src="./assets/blogging.png" class="blog"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
